fix width button on mobile

--- a/src/components/PhoneDetail/PhoneDetails.module.css
+++ b/src/components/PhoneDetail/PhoneDetails.module.css
@@ -115,4 +115,7 @@
         padding: 1rem 1rem;
         gap: 0;
     }
+    .addButton {
+        width: auto;
+    }
 }
